--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,9 @@ opt-level = 3
 # debug = true
 # lto = false
 
+[patch."https://github.com/servo/webrender"]
+"webrender" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
+"webrender_api" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
+
 [patch.crates-io]
-# If you need to temporarily test Servo with a local fork of some upstream
-# crate, add that here. Use the form:
-#
-#     <crate> = { path = "/path/to/local/checkout" }
-#
-# Or for a git dependency:
-#
-#     [patch."https://github.com/servo/<repository>"]
-#     <crate> = { path = "/path/to/local/checkout" }
+winit = { git = 'https://github.com/zakorgy/winit', branch = 'dx11'}
