--- a/components/canvas/Cargo.toml
+++ b/components/canvas/Cargo.toml
@@ -22,5 +22,5 @@ log = "0.3.5"
 num-traits = "0.1.32"
 offscreen_gl_context = { version = "0.12", features = ["serde", "osmesa"] }
 servo_config = {path = "../config"}
-webrender = {git = "https://github.com/servo/webrender"}
+webrender = {git = "https://github.com/servo/webrender", features = ["dx11"]}
 webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
