--- a/ports/cef/Cargo.toml
+++ b/ports/cef/Cargo.toml
@@ -25,7 +25,7 @@ compositing = {path = "../../components/compositing"}
 devtools = {path = "../../components/devtools"}
 euclid = "0.15"
 gleam = "0.4"
-glutin_app = {path = "../glutin"}
+winit_app = {path = "../glutin"}
 libc = "0.2"
 libservo = {path = "../../components/servo"}
 log = {version = "0.3.5", features = ["release_max_level_info"]}
