--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ opt-level = 3
 # debug = true
 # lto = false
 
-[patch.crates-io]
+#[patch.crates-io]
 # If you need to temporarily test Servo with a local fork of some upstream
 # crate, add that here. Use the form:
 #
@@ -24,3 +24,8 @@ opt-level = 3
 #
 #     [patch."https://github.com/servo/<repository>"]
 #     <crate> = { path = "/path/to/local/checkout" }
+#webrender = { path = '../webrender/webrender'}
+#webrender_api = { path = '../webrender/webrender_api'}
+[replace]
+"https://github.com/servo/webrender#0.50.0" = { path = '../webrender/webrender' }
+"https://github.com/servo/webrender#webrender_api:0.50.0" = { path = '../webrender/webrender_api' }
