apply latest webrender changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,5 @@ opt-level = 3
 #webrender = { path = '../webrender/webrender'}
 #webrender_api = { path = '../webrender/webrender_api'}
 [replace]
-"https://github.com/servo/webrender#0.50.0" = { path = '../webrender/webrender' }
-"https://github.com/servo/webrender#webrender_api:0.50.0" = { path = '../webrender/webrender_api' }
+"https://github.com/servo/webrender#0.50.0" = { git = 'https://github.com/szeged/webrender', branch='refactor_44_to_50' }
+"https://github.com/servo/webrender#webrender_api:0.50.0" = { git = 'https://github.com/szeged/webrender', branch='refactor_44_to_50' }
