--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,12 @@ opt-level = 3
 #     <crate> = { path = "/path/to/local/checkout" }
 #webrender = { path = '../webrender/webrender'}
 #webrender_api = { path = '../webrender/webrender_api'}
-[replace]
-"https://github.com/servo/webrender#0.50.0" = { git = 'https://github.com/szeged/webrender', branch='refactor_44_to_50' }
-"https://github.com/servo/webrender#webrender_api:0.50.0" = { git = 'https://github.com/szeged/webrender', branch='refactor_44_to_50' }
+#[replace]
+#"https://github.com/servo/webrender#0.50.0" = { path = '../webrender/webrender' }
+#"https://github.com/servo/webrender#webrender_api:0.50.0" = { path = '../webrender/webrender_api' }
+#"https://github.com/servo/webrender#0.53.1" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
+#"https://github.com/servo/webrender#webrender_api:0.53.1" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
+
+[patch."https://github.com/servo/webrender"]
+"webrender" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
+"webrender_api" = { git = 'https://github.com/szeged/webrender', branch='WR_53_dx11' }
