Use WebRender with gfx backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,11 @@ opt-level = 3
 # debug = true
 # lto = false
 
-[patch.crates-io]
+#[patch.crates-io]
+
+[patch."https://github.com/servo/webrender"]
+"webrender" = { git = 'https://github.com/szeged/webrender', branch='rebase_upstream' }
+"webrender_api" = { git = 'https://github.com/szeged/webrender', branch='rebase_upstream' }
 
 # If you need to temporarily test Servo with a local fork of some upstream
 # crate, add that here. Use the form:
