--- a/ports/servo/Cargo.toml
+++ b/ports/servo/Cargo.toml
@@ -29,8 +29,10 @@ backtrace = "0.3"
 bitflags = "1.0"
 compositing = {path = "../../components/compositing"}
 euclid = "0.17"
-gleam = "0.4"
-glutin = "0.13"
+gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git", rev= "d78bd11", features = ["glsl-to-spirv"] }
+gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev= "d78bd11" , feature = "serde"}
+#gleam = "0.4"
+winit = "0.10.0"
 libservo = {path = "../../components/servo"}
 log = "0.3.5"
 msg = {path = "../../components/msg"}
