--- a/components/compositing/Cargo.toml
+++ b/components/compositing/Cargo.toml
@@ -11,6 +11,7 @@ path = "lib.rs"
 
 [dependencies]
 euclid = "0.17"
+gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev= "d78bd11" , feature = "serde"}
 gfx_traits = {path = "../gfx_traits"}
 gleam = "0.4"
 image = "0.18"
@@ -29,3 +30,4 @@ style_traits = {path = "../style_traits"}
 time = "0.1.17"
 webrender = {git = "https://github.com/servo/webrender"}
 webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+winit = "0.10.0"
