Update gfx revision

--- a/components/compositing/Cargo.toml
+++ b/components/compositing/Cargo.toml
@@ -11,7 +11,7 @@ path = "lib.rs"
 
 [dependencies]
 euclid = "0.17"
-gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev= "d78bd11" , feature = "serde"}
+gfx-hal = { git = "https://github.com/gfx-rs/gfx.git", rev = "b3d362f" }
 gfx_traits = {path = "../gfx_traits"}
 gleam = "0.4"
 image = "0.18"
