--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,9 @@ opt-level = 3
 #[patch.crates-io]
 
 [patch."https://github.com/servo/webrender"]
-#"webrender" = { git = 'https://github.com/szeged/webrender', branch='rebase_upstream' }
+#"webrender" = { git = 'https://github.com/zakorgy/webrender', branch='gfx-update' }
 "webrender" = { path = "../webrender_rebase/webrender"}
-#"webrender_api" = { git = 'https://github.com/szeged/webrender', branch='rebase_upstream' }
+#"webrender_api" = { git = 'https://github.com/zakorgy/webrender', branch='gfx-update' }
 "webrender_api" = { path = "../webrender_rebase/webrender_api"}
 
 # If you need to temporarily test Servo with a local fork of some upstream
