--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,13 @@ opt-level = 3
 # debug = true
 # lto = false
 
-[patch.crates-io]
-# If you need to temporarily test Servo with a local fork of some upstream
-# crate, add that here. Use the form:
-#
-#     <crate> = { path = "/path/to/local/checkout" }
-#
-# Or for a git dependency:
-#
-#     [patch."https://github.com/servo/<repository>"]
-#     <crate> = { path = "/path/to/local/checkout" }
+#[patch."https://github.com/servo/webrender"]
+#"webrender" = { git = 'https://github.com/szeged/webrender' }
+#"webrender_api" = { git = 'https://github.com/szeged/webrender' }
+
+[replace]
+"https://github.com/servo/webrender#0.57.2" = { git = 'https://github.com/szeged/webrender' }
+"https://github.com/servo/webrender#webrender_api:0.57.2" = { git = 'https://github.com/szeged/webrender' }
+"https://github.com/gfx-rs/gfx.git#gfx-hal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="8d2b93a8dfd9c99b7cbec703924a628d56cc9c73"}
+"https://github.com/gfx-rs/gfx.git#gfx-backend-vulkan:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="8d2b93a8dfd9c99b7cbec703924a628d56cc9c73" }
+"https://github.com/gfx-rs/gfx.git#gfx-backend-dx12:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="8d2b93a8dfd9c99b7cbec703924a628d56cc9c73" }
