--- a/components/compositing/Cargo.toml
+++ b/components/compositing/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 euclid = "0.17"
 gfx_traits = {path = "../gfx_traits"}
 gleam = {version = "0.5", optional = true}
+gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
 image = "0.18"
 ipc-channel = "0.10"
 libc = "0.2"
@@ -33,6 +34,7 @@ style_traits = {path = "../style_traits"}
 time = "0.1.17"
 webrender = {git = "https://github.com/servo/webrender", features = ["capture"]}
 webrender_api = {git = "https://github.com/servo/webrender", features = ["ipc"]}
+winit = { version = "0.13", optional = true}
 
 [build-dependencies]
 toml = "0.4.5"
