--- a/components/servo/Cargo.toml
+++ b/components/servo/Cargo.toml
@@ -32,7 +32,8 @@ bluetooth_traits = {path = "../bluetooth_traits"}
 bluetooth = {path = "../bluetooth"}
 canvas = {path = "../canvas"}
 canvas_traits = {path = "../canvas_traits"}
-compositing = {path = "../compositing", features = ["gleam"]}
+#compositing = {path = "../compositing", features = ["gleam"]}
+compositing = {path = "../compositing", features = ["winit"]}
 constellation = {path = "../constellation"}
 debugger = {path = "../debugger"}
 devtools = {path = "../devtools"}
@@ -41,6 +42,7 @@ embedder_traits = {path = "../embedder_traits"}
 env_logger = "0.5"
 euclid = "0.17"
 gfx = {path = "../gfx"}
+gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
 gleam = "0.5"
 ipc-channel = "0.10"
 layout_thread = {path = "../layout_thread"}
